# Against-hope

./: .gitignore  README.md  pyproject.toml
against_hope/: __init__.py  compact_game.py  congestion_game.py  ellipsoid.py  game.py  graphical_games.py  jlb_driver.py  jlb_ellipsoid.py  jlb_oracle.py  types.py  verify.py
against_hope/fixtures/: benchmark_games.py  ground_truth.py
examples/: custom_game_example.py  graphical_games_example.py  pigou_example.py
tests/: test_01_compact_game.py  test_02_congestion_game.py  test_03_jlb_oracle.py  test_05_ellipsoid.py  test_06_verify_exact_ce.py
